# MCDS-dFMRI

./: .gitignore  CMakeLists.txt  README.md  blender_draw_axons.py  branch_no_branch.py  change_icvf.py  convergence_wrt_timesteps.py  create_ADC_curve.py  create_ADC_curve_T_all_N_5000.py  create_ADC_curve_ines.py  create_configs.sh  create_gamma_dist.py  create_new_axons_list.py  create_new_cyl_list.py  get_icvf.sh  get_icvf_axons.sh  job.sh  make_conf_file.py  make_conf_file.sh  make_conf_file_cylinders.sh  read_outputs_functions.py  run.sh  run2.sh  run2_cylinders.sh  run3.sh  run_compare_N.sh  run_compare_vol_inc.sh  run_exchange.sh  slice_picture.py  slice_picture_copy.py  slice_picture_cylinders.py  test_T_groups.py  test_branching.py  test_soma_neurites_analytics.py  vis_axons.py  vis_neurons.py  visualisation.py  write_new_pgse_scheme.py
Analysis/Python/: branch_no_branch.py  create_ADC_curve_T_all_N_5000.py  create_ADC_curve_ines.py  exch_no_exch.py  perc_exchange.py  test_N_groups.py  test_T_groups.py  test_soma_neurites_analytics.py  test_soma_neurites_analytics_5_n.py
Analysis/R/: All_N_1_T.R  All_N_all_T.R  All_T_1_N.R  branch_no_branch.R
Analysis/data/: 21_dir_benchmark_branching  21_dir_benchmark_no_branching
MCDC_Simulator_public-master/: MC-DC_Simulator  compile.sh  run.sh
MCDC_Simulator_public-master/docs/conf_file_examples/: Create_Gamma_Dist_active.conf  Create_Gamma_Dist_rest.conf  Create_neurons_intra.conf  Cylinders_from_file_active_extra.conf  Cylinders_from_file_active_intra.conf  Cylinders_from_file_rest_extra.conf  Cylinders_from_file_rest_intra.conf  Neurons_from_file_extra.conf  Neurons_from_file_intra.conf  Neurons_from_file_model.conf  Neurons_from_file_run.conf  create_substrate.conf  freeDiffusion.conf  gammaDistributedAxons.conf  gammaDistributedCylinders.conf  gammaDistributedCylinders_active.conf  gammaDistributedCylinders_active_extra.conf  gammaDistributedCylinders_active_intra.conf  gammaDistributedCylinders_old.conf  gammaDistributedCylinders_rest.conf  gammaDistributedCylinders_rest_extra.conf  gammaDistributedCylinders_rest_intra.conf  meshIntraInitialization_neuron.conf  read_from_substrate.conf
MCDC_Simulator_public-master/docs/scheme_files/: PGSE_21_dir.scheme  PGSE_sample_scheme_b0.scheme  PGSE_sample_scheme_b1.scheme  PGSE_sample_scheme_new.scheme  create_scheme.py
MCDC_Simulator_public-master/instructions/demos/output/: cylinder_distribution_gamma_distributed_dyn_cylinder_list.txt  cylinder_gamma_packing_test_DWI.txt  cylinder_gamma_packing_test_gamma_distributed_cylinder_list.txt  cylinder_gamma_packing_test_simulation_info.txt  dyn_cylinder_gamma_packing_test_0_gamma_distributed_dyn_cylinder_after_swell_list.txt  dyn_cylinder_gamma_packing_test_0_gamma_distributed_dyn_cylinder_swell_list.txt  dyn_cylinder_gamma_packing_test_DWI.txt  dyn_cylinder_gamma_packing_test_gamma_distributed_dyn_cylinder_list.txt  dyn_cylinder_gamma_packing_test_simulation_info.txt  free_diffusion_test_DWI.txt  free_diffusion_test_rep_00_DWI.txt  free_diffusion_test_rep_00_simulation_info.txt  free_diffusion_test_simulation_info.txt
MCDC_Simulator_public-master/instructions/demos/output/dynamic_cylinders/: conf1.txt  conf2.txt  conf3.txt
MCDC_Simulator_public-master/instructions/demos/output/no_swell/: dyn_cylinder_gamma_packing_test_0.hdr.txt  dyn_cylinder_gamma_packing_test_DWI.txt  dyn_cylinder_gamma_packing_test_gamma_distributed_dyn_cylinder_list.txt  dyn_cylinder_gamma_packing_test_simulation_info.txt
MCDC_Simulator_public-master/old_files/: axongammadistribution.cpp  axongammadistribution.h  grow_axons.cpp  grow_axons.h
MCDC_Simulator_public-master/scratch_docs/: compile.sh  job.sh  job_growth.sh  make_conf_file.sh  make_conf_file_cylinders.sh  run.sh  run2.sh  run2_cylinders.sh
MCDC_Simulator_public-master/src/: Axon.cpp  Axon.h  Dendrite.cpp  Dendrite.h  Makefile  Neuron.cpp  Neuron.h  axongammadistribution.cpp  axongammadistribution.h  collision.cpp  collision.h  collisionsphere.h  constants.h  cylinder.cpp  cylinder.h  cylindergammadistribution.cpp  dynamic_Cylinder.cpp  dynamic_Cylinder.h  dynamic_sphere.cpp  dynamic_sphere.h  dynamicsSimulation.cpp  dynamicsSimulation.h  dyncylindergammadistribution.cpp  dyncylindergammadistribution.h  gradientwaveform.cpp  grow_axons.cpp  grow_axons.h  main  main.cpp  mcsimulation.cpp  mcsimulation.h  neurondistribution.cpp  neurondistribution.h  obstacle.cpp  obstacle.h  parallelmcsimulation.cpp  parallelmcsimulation.h  parameters.cpp  parameters.h  pgsesequence.cpp  (+21 more)
